updating the menu icon for mobile

--- a/0-index.html
+++ b/0-index.html
@@ -11,12 +11,22 @@
 <body>
     <header class="header">
         <nav class="navbar">
+        <div class="idk">
+            <div class="menu-icon">
+                <input type="checkbox" name="icon-btn" id="icon-btn">
+                <label for="icon-btn">
+                    <div class="ham first"></div>
+                    <div class="ham small"></div>
+                    <div class="ham second"></div>
+                </label>
+            </div>
             <img class="logo" src="images/logo_headphones.png" alt="logo_headphones" width="161px" height="32px">
-            <ul class="nav-items-container">
-                <li class="nav-items">what we do<br></li>
-                <li class="nav-items">our results</li>
-                <li class="nav-items">contact us</li>
-            </ul>
+            </div>
+            <div class="nav-items-container">
+                <span class="nav-items">what we do<br></span>
+                <span class="nav-items">our results</span>
+                <span class="nav-items">contact us</span>
+            </div>
         </nav>
         
         <div class="hero-section">
