finally mobile version fixed, html input updated and fixed, deleted a lot of useless divs, and updated the css

--- a/0-index.html
+++ b/0-index.html
@@ -10,24 +10,25 @@
 </head>
 <body>
     <header class="header">
-        <nav class="navbar">
-        <div class="idk">
-            <div class="menu-icon">
-                <input type="checkbox" name="icon-btn" id="icon-btn">
-                <label for="icon-btn">
-                    <div class="ham first"></div>
-                    <div class="ham small"></div>
-                    <div class="ham second"></div>
-                </label>
-            </div>
+            <div class="navbar">
             <img class="logo" src="images/logo_headphones.png" alt="logo_headphones" width="161px" height="32px">
+
+                    <input type="checkbox" name="icon-btn" id="icon-btn">
+                    <label for="icon-btn">
+                        <div class="ham first"></div>
+                        <div class="ham small"></div>
+                        <div class="ham second"></div>
+                    </label>
+                    <div class="nav-items-container">
+                        <span class="nav-items">what we do</span>
+                        <span class="nav-items">our results</span>
+                        <span class="nav-items">contact us</span>
+                    </div>
+
+            
             </div>
-            <div class="nav-items-container">
-                <span class="nav-items">what we do<br></span>
-                <span class="nav-items">our results</span>
-                <span class="nav-items">contact us</span>
-            </div>
-        </nav>
+
+ 
         
         <div class="hero-section">
             <h1 class="hero-header">Lorem ipsum dolor set amet lorem ipsum</h1>
